# med-lm-train

./: AGENTS.md  README.md  pyproject.toml
examples/alphabet_sort/: README.md
examples/hendrycks_sanity/: README.md
examples/reverse_text/: README.md
experiments/: rl_lora_lr5e5_r16.toml
experiments/baseline/: async2.toml  async3.toml  baseline.toml  compile.toml  compile_full.toml  model_seq_len.toml  model_seq_len_2.toml  token_batch_size.toml
experiments/openmed_icd10/: README.md  rl.toml  rl_4b_lora.toml  rl_4b_lora_long_seq.toml  rl_4b_lora_lr1e5.toml  rl_4b_lora_super.toml  rl_4b_lora_super_train_10.toml  rl_4b_lora_super_train_50.toml  rl_4b_lora_super_train_50_all.toml  rl_4b_lora_super_train_50_nope.toml  rl_4b_lora_super_train_all.toml  rl_4b_lora_super_train_base.toml  rl_4b_lora_super_train_nope.toml  rl_4b_lora_super_train_test_openmed.toml  rl_dp6_long.toml  rl_lora_lower_lr.toml  rl_lora_lr5e5_r16.toml  rl_lora_r16.toml  rl_lora_r8.toml  rl_lora_rlfull.toml  rl_single.toml  sft.toml
medarc_rl/: medarc_slurm.py  medarc_train.py  utils.py
medarc_rl/launchers/: rl_local.py
medarc_rl/slurm_templates/: one_node_rl.j2  one_node_sft.j2
tests/: test_medarc_slurm.py  test_medarc_train.py
