[project]
name = "medarc-rl"
version = "0.1.0"
description = "MedARC environments, utilities, and tools for PrimeRL"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "jinja2>=3.1.0",
    "medarc-verifiers",
    "prime-rl",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
    "wandb==0.25.1",
    "vllm>=0.17,<0.18"
]

[project.optional-dependencies]
envs = ["prime-rl[envs]"]
fa2 = ["prime-rl[flash-attn]"]
fa3 = ["prime-rl[flash-attn]", "flash_attn_3"]
fa4 = ["prime-rl[flash-attn]", "flash_attn_3", "flash-attn-4>=4.0.0b4"]
flash-attn-2 = ["prime-rl[flash-attn]"]
flash-attn-3 = ["prime-rl[flash-attn]", "flash_attn_3"]
flash-attn-4 =  ["prime-rl[flash-attn]", "flash_attn_3", "flash-attn-4>=4.0.0b4"]

[project.scripts]
medarc_slurm = "medarc_rl.medarc_slurm:app"
medarc_train = "medarc_rl.medarc_train:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "medarc_rl"
module-root = ""

[tool.uv.sources]
medarc-verifiers = { path = "../med-lm-envs", editable = true }
prime-rl = { path = "prime-rl", editable = true }
torch = { index = "pytorch-cu128" }
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "5c1c72b" }
vllm = [
    { url = "https://wheels.vllm.ai/097eb544e9a22810c9b7a59e586b61627b308362/vllm-0.17.0rc0-cp38-abi3-manylinux_2_31_x86_64.whl", marker = "platform_machine == 'x86_64'" },
    { url = "https://wheels.vllm.ai/097eb544e9a22810c9b7a59e586b61627b308362/vllm-0.17.0rc0-cp38-abi3-manylinux_2_31_aarch64.whl", marker = "platform_machine == 'aarch64'" },
]
flash_attn_3 = { index = "flash-attn-3-cu128-torch2100" }

[[tool.uv.index]]
name = "flash-attn-3-cu128-torch2100"
url = "https://windreamer.github.io/flash-attention3-wheels/cu128_torch2100"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.uv]
preview = true
package = true
prerelease = "allow"
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
override-dependencies = [
    "nvidia-cudnn-cu12>=9.15",
    "nvidia-cutlass-dsl>=4.4.1",
    "transformers>=5.1.0.dev0",
    "quack-kernels>=0.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
